chore: fix java 8 build