@@ -188,7 +188,7 @@ public class TxSerializer
     }
 
     private void serializeFile(String jsonFile, String target) throws IOException {
-        String json = Files.readString(Paths.get(jsonFile), StandardCharsets.UTF_8);
+        String json = new String(Files.readAllBytes(Paths.get(jsonFile)), StandardCharsets.UTF_8);
         serializeJson(json, target);
     }
 
